add functioning api call for USD -> EUR

--- a/src/index.html
+++ b/src/index.html
@@ -16,14 +16,14 @@
           <label for="conAmount">USD Amount:</label>
           <input id="conAmount" class="form-control" type="text">
         </div>
-        <button type="submit" class="btn-dark">Convert to Euro</button>
+        <button id="userButton" type="submit" class="btn-dark">Convert to Euro</button>
 
       </form>
     </div>
     <div id="conversionResult">
 
     </div>
-    <div id="ErrorMessage">
+    <div id="errorMessage">
 
     </div>
   </div>
