--- a/src/index.html
+++ b/src/index.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<head>
-  <title>Currency Converter</title>
-</head>
-<body>
-  <div class="container">
-    <div id="intro">
-      <h1>Currency Conversion Calculator</h1>
-      <img id='testImg' src="assets/images/moneyPhoto.png" alt="hand holding money from different countries">
+  <head>
+    <title>Currency Converter</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="sectionDiv" id="intro">
+        <h1>Currency Conversion Calculator</h1>
+        <img id="testImg" src="assets/images/moneyPhoto.png" alt="hand holding money from different countries"/>
+      </div>
+      <div class="sectionDiv" id="userForm">
+        <form id="selectForm">
+          <div class="form-group">
+            <label for="conAmount">USD Amount:</label>
+            <input id="conAmount" class="form-control" type="text" />
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlSelect1">Select a Currency</label>
+            <select class="form-control" id="toCurrency">
+              <option value="CLICK PROMPT">Click to see options</option>
+              <option value="EUR">Euro - EUR</option>
+              <option value="CUC">Cuban Peso - CUC</option>
+              <option value="DKK">Danish Crone - DKK</option>
+              <option value="GBP">Pound Sterling - GBP</option>
+              <option value="INR">Indian Rupee - INR</option>
+            </select>
+          </div>
+          <button id="userButton" type="submit" class="btn-dark">
+            Convert Currency
+          </button>
+        </form>
+      </div>
+      <div class="sectionDiv" id="conversionResult"></div>
+      <div class="sectionDiv" id="errorMessage"></div>
     </div>
-    <div id="userForm">
-      <form id="selectForm">
-
-        <div class="form-group">
-          <label for="conAmount">USD Amount:</label>
-          <input id="conAmount" class="form-control" type="text">
-        </div>
-        <button id="userButton" type="submit" class="btn-dark">Convert to Euro</button>
-
-      </form>
-    </div>
-    <div id="conversionResult">
-
-    </div>
-    <div id="errorMessage">
-
-    </div>
-  </div>
-</body>
+  </body>
 </html>
-
